perf(server): Migrate to virtual thread executor and wire async persistence shutdown
Switch clientExecutor to newVirtualThreadPerTaskExecutor and acceptorThread to
Thread.ofVirtual. Make DB path configurable via cboe.db.path system property for
test isolation. Use config.getRateLimitPerMinute() for the RateLimiter. Call
stopAsyncPersistence() before dbManager.close() on shutdown. Raise default
maxConnections to 10 000.